# pc-projeto-sockets

./: .gitignore  README.md  pyproject.toml  requirements.txt
dara/: __init__.py
dara/client/: connection.py  main.py  pyro_session.py  ui.py
dara/domain/: __init__.py  board.py  piece.py  rules.py
dara/net/: __init__.py  interfaces.py  protocol.py  pyro_contract.py  pyro_registry.py
dara/net/transport/: __init__.py  tcp.py  udp.py
dara/server/: game_room.py  handler.py  main.py  pyro_service.py  session_stats.py
tests/: test_pyro_integration.py  test_rules.py
